Prevents extra large gap between final item and pagination

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -388,7 +388,7 @@ blockquote p:last-child:after, q:after {
 }
 /* Ends Flickity styles */
 
-.post__nav {
+.pagination, .view-more {
 	padding-top: var(--dkuk-total-stripe);
 }
 
